# arm-gic

./: AUTHORS  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: gicv2.rs  gicv3.rs  lib.rs  sysreg.rs
src/gicv2/: registers.rs
src/gicv3/: registers.rs
src/sysreg/: aarch32.rs  aarch64.rs  fake.rs
