[package]
name = "arm-gic"
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A driver for the Arm Generic Interrupt Controller version 2, 3 or 4."
authors = [
  "Andrew Walbran <qwandor@google.com>",
  "Fritz Stracke <fritz.stracke@rwth-aachen.de>",
]
repository = "https://github.com/google/arm-gic"
keywords = ["arm", "aarch64", "driver", "gic", "interrupt-controller"]
categories = ["embedded", "no-std", "hardware-support"]

[dependencies]
bitflags = "2.8.0"
thiserror = { version = "2.0.11", default-features = false }

[features]
fakes = []

[package.metadata.docs.rs]
default-target = "aarch64-unknown-none"
